# unrivaled-league-snapbacks-3s

./: .gitignore  DEPLOYMENT.md  EXCEL_CONVERSION_SETUP.md  ISSUES_AND_AUTOMATION.md  PRE_LAUNCH_CHECKLIST.md  QUICK_START.md  README.md  STATS_CONVERSION_GUIDE.md  TEST_DATA_README.md  bugs_report.md  kernel_config.json  main.py  player_id_lookup.txt  pyproject.toml  requirements.txt  sample_real_game_stats.csv  set_jupyter_kernel.py  stats_conversion_template.csv
app/: streamlit_app.py
app/pages/: 1_Manager_Portal.py  2_Admin_Portal.py  3_Tournament.py  4_Season_Recap.py
data/: .gitignore
data/handmade/: game_id_mapping.csv  game_schedule.csv  managers.csv  players.csv  scoring_config.csv  tournament_scoring_config.csv
data/processed/: draft_results.csv  lineups.csv  manager_daily_scores.csv  player_game_scores.csv  rosters.csv  standings.csv  tournament_picks.csv  tournament_scores.csv  transaction_log.csv
etl/: config.py  data_loader.py  draft_engine.py  lineup_manager.py  player_stats.py  score_calculator.py  standings_updater.py  weekly_recap.py
tests/: README.md  test_season_simulation.py  test_tournament.py
